added css and js folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>toDoList Project</title>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
         .sub:focus{
             background-color: black;
@@ -28,8 +28,8 @@
                 <ol class="text-center mr-5" id="ul">FOOD ITEMS</ol>
             </div>
         </main>
- <script src="../js/jquery-3.4.1.js"></script>
- <script src="../js/bootstrap.bundle.min.js"></script>
+ <script src="js/jquery-3.4.1.js"></script>
+ <script src="js/bootstrap.bundle.min.js"></script>
  <script>
      var submit=document.getElementById("submit")
     
